-- +goose Up
-- +goose StatementBegin
create table device_type
(
    id   int generated by default as identity primary key,
    name text not null
);

create table device
(
    id               bigint generated by default as identity primary key,
    type_id          int,
    name             text not null,
    house_id         bigint not null,
    status           bool default false, 
    serial_number    text not null,
    created_at       timestamp default now()
);

create table device_configuration
(
    id               bigint primary key references device,
    data             jsonb not null,
    updated_at       timestamp default now()
);
-- +goose StatementEnd

-- +goose Down
-- +goose StatementBegin
delete table device_configuration
delete table device
delete table device_type
-- +goose StatementEnd
